// Modelo de dados - postech-tc3-app
// https://dbdiagram.io/d para visualizar
//
// Gerado a partir dos modelos GORM em internal/adapters/outbound/postgresql/model.
// O schema e aplicado por AutoMigrate no bootstrap (cmd/api/bootstrap/container.go).

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  email varchar [not null, unique]
  password_hash varchar [not null]
  role varchar [not null, default: 'client', note: 'admin | client']
  failed_attempts int [not null, default: 0]
  locked_until timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id, note: 'FK logica: o AutoMigrate cria so o indice, sem constraint']
  token_hash varchar [not null, unique]
  expires_at timestamp [not null]
  revoked boolean [default: false]
  created_at timestamp

  indexes {
    user_id
  }
}

Table requesters {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  document varchar [not null, unique, note: 'CPF ou CNPJ, apenas digitos']
  email varchar [not null]
  phone varchar [not null]
  status varchar [not null, default: 'active', note: 'active | inactive']
  created_at timestamp
  updated_at timestamp
}

Table vehicles {
  id uuid [pk, default: `gen_random_uuid()`]
  requester_id uuid [not null, ref: > requesters.id, note: 'ON DELETE RESTRICT']
  plate varchar [not null, unique]
  brand varchar [not null]
  model varchar [not null]
  year int [not null]
  created_at timestamp
  updated_at timestamp

  indexes {
    requester_id
  }
}

Table parts {
  id uuid [pk, default: `gen_random_uuid()`]
  manufacturer_code varchar [not null, unique]
  name varchar [not null]
  description text
  unit varchar [not null]
  price numeric [not null]
  stock int [not null, default: 0]
  created_at timestamp
  updated_at timestamp
}

Table services {
  id uuid [pk, default: `gen_random_uuid()`]
  code int [not null, unique]
  name varchar [not null]
  description text
  price numeric [not null]
  duration_min int [not null]
  created_at timestamp
  updated_at timestamp
}

Table service_orders {
  id uuid [pk, default: `gen_random_uuid()`]
  code int [not null, unique, increment, note: 'codigo publico da OS']
  requester_id uuid [not null, ref: > requesters.id, note: 'ON DELETE RESTRICT']
  vehicle_id uuid [not null, ref: > vehicles.id, note: 'ON DELETE RESTRICT']
  status varchar [not null, note: 'received | in_diagnosis | awaiting_approval | in_execution | finished | delivered']
  services jsonb [note: 'snapshot: [{service_id, description, price}]']
  parts jsonb [note: 'snapshot: [{part_id, description, quantity, unit_price}]']
  total_amount numeric [not null]
  notes text
  created_at timestamp
  updated_at timestamp
  started_at timestamp [null, note: 'gravado na entrada em in_execution']
  finished_at timestamp [null, note: 'gravado na entrada em finished']

  indexes {
    requester_id
  }
}
